separate css and jquery from html
separate css and jquery to different file in public folder

--- a/index.html
+++ b/index.html
@@ -7,154 +7,7 @@
 
     <title>Chat app</title>
 
-    <style>
-        * {
-            font-family: 'Helvetica Neue', Helvetica, sans-serif;
-            font-size: 14px;
-            margin: 0;
-        }
-        a {
-            font-weight: bold;
-            color: #fff;
-            text-decoration: none;
-        }
-        .container {
-            position: absolute;
-            width: 400px;
-            display: block;
-            margin-left: 20px;
-            padding-bottom: 65px;
-            padding-top: 60px;
-            text-align: center;
-        }
-        .back {
-            position: fixed;
-            width: 400px;
-            height: 100%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
-            background: #ECECEC;
-            margin-left: 20px;
-        }
-        .header {
-            padding: 20px 20px 18px 20px;
-            background: #5FB471;
-            color: #fff;
-            position: fixed;
-            top: 0;
-            width: 360px;
-            z-index: 1;
-            text-align:left;
-        }
-        .header h2 {
-            font-size: 16px;
-            line-height: 15px;
-            display: inline-block;
-        }
-        .chat-box,
-        .enter-message {
-            background: #ECECEC;
-            padding: 0 20px;
-            color: #a1a1a1;
-        }
-        .chat-box .message-box {
-            padding: 18px 0 10px;
-            clear: both;
-            display: none;
-            text-align: left;
-        }
-        .message-box .picture {
-            float: left;
-            width: 50px;
-            display: block;
-            padding-right: 10px;
-        }
-        .picture img {
-            width: 48px;
-            height: 48px;
-            border-radius: 5px;
-        }
-        .picture .image {
-            width: 48px;
-            height: 48px;
-            border-radius: 5px;
-        }
-        .message {
-            background: #fff;
-            display: inline-block;
-            padding: 13px;
-            width: 274px;
-            border-radius: 2px;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, .04);
-            position: relative;
-        }
-        .message:before {
-            content: "";
-            position: absolute;
-            display: block;
-            left: 0;
-            border-right: 6px solid #fff;
-            border-top: 6px solid transparent;
-            border-bottom: 6px solid transparent;
-            top: 10px;
-            margin-left: -6px;
-        }
-        .message span {
-            color: #555;
-            font-weight: bold;
-        }
-        .message p {
-            padding-top: 5px;
-        }
-        .message-box.right-img .picture {
-            float: right;
-            padding: 0;
-            padding-left: 10px;
-        }
-        .message-box.right-img .picture img {
-            float: right;
-        }
-        .message-box.right-img .message:before {
-            left: 100%;
-            margin-right: 6px;
-            margin-left: 0;
-            border-right: 6px solid transparent;
-            border-left: 6px solid #fff;
-            border-top: 6px solid transparent;
-            border-bottom: 6px solid transparent;
-        }
-        .enter-message {
-            padding: 13px 20px;
-            position: fixed;
-            bottom: 0;
-            left: 20px;
-        }
-        .enter-message input {
-            border: none;
-            padding: 10px 12px;
-            background: #d3d3d3;
-            width: 260px;
-            border-radius: 2px;
-        }
-        .enter-message .send {
-            padding: 10px 15px;
-            background: #6294c2;
-            border-radius: 2px;
-            float: right;
-        }
-        .connect-message {
-            background-color: #d3d3d3;
-            border-radius: 2px;
-            box-shadow: 0 1px 1px rgba(0, 0, 0, .04);
-            padding: 5px 5px;
-            display: none;
-            display: inline-block;
-        }
-        .connect-message p {
-            text-align: center;
-            color: #FFF;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
 
 </head>
 
@@ -176,62 +29,7 @@
 
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
-    <script>
-        var socket = io();
-        var myname, myURL;
-        $(window).scroll(function() {
-
-        });
-        socket.on('sorry message', function() {
-            var box = $('<div class="connect-message">');
-            box.append($('<p>').text("sorry you are late."));
-            $('.header').after(box);
-            box.slideDown();
-        });
-        socket.on('identity', function(data) {
-            myname = data.nick;
-            myURL = data.imgURL;
-            $('.header h2').text(data.title);
-        });
-        $('.send').click(function() {
-            var input = $('input').val();
-            $('input').val('');
-            if (input != '') {
-                var box = $('<div class="message-box right-img">');
-                var image = $('<img title="user name"/>').attr('src', myURL);
-                var picture = $('<div class="picture">');
-                box.append(picture);
-                picture.append(image);
-                var message = $('<div class="message">');
-                box.append(message);
-                message.append($('<span>').text(myname));
-                message.append($('<p>').text(input));
-                $('.chat-box').prepend(box);
-                box.slideDown();
-            }
-            socket.emit('chat message', input);
-        });
-        socket.on('chat message', function(data) {
-            var box = $('<div class="message-box left-img">');
-            var image = $('<img title="user name"/>').attr('src', data.imgURL);
-            var picture = $('<div class="picture">');
-            box.append(picture);
-            picture.append(image);
-            var message = $('<div class="message">');
-            box.append(message);
-            message.append($('<span>').text(data.nick));
-            message.append($('<p>').text(data.msg));
-            $('.chat-box').prepend(box);
-            box.slideDown();
-        });
-        socket.on('connect message', function(msg) {
-            var box = $('<div class="connect-message">');
-            box.append($('<p>').text(msg));
-            $('.header').after(box);
-            box.slideDown();
-            box.delay(4000).slideUp();
-        });
-    </script>
+    <script type="text/javascript" src="/chat-client.js"></script>
 </body>
 
 </html>
